k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartjewel-admin-service
  labels:
    app: smartjewel-admin
spec:
  type: ClusterIP
  selector:
    app: smartjewel-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
