k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartjewel-catalog-service
  labels:
    app: smartjewel-catalog
spec:
  type: ClusterIP
  selector:
    app: smartjewel-catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
