k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartjewel-frontend-service
  labels:
    app: smartjewel-frontend
spec:
  type: LoadBalancer
  selector:
    app: smartjewel-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
